--- a/css/estilos.css
+++ b/css/estilos.css
@@ -626,3 +626,68 @@ footer {
     color: white;
 }
 /* estilos de las paginas de catalogos  */
+.detalle-rafael {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+    text-align: center;
+    background-color: #f4f4f4;
+}
+
+.detalle-rafael h1 {
+    font-size: 3rem;
+    color: #D50032;
+}
+
+.detalle-rafael .btn {
+    margin-top: 20px;
+    padding: 10px 20px;
+    background-color: #0033A0;
+    color: white;
+    text-decoration: none;
+    font-size: 1rem;
+    border-radius: 5px;
+    transition: background-color 0.3s ease;
+}
+
+.detalle-rafael .btn:hover {
+    background-color: #001f70;
+}
+.detalle-platillo {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+    text-align: center;
+    background-color: #f4f4f4;
+}
+
+.detalle-platillo h1 {
+    font-size: 2.5rem;
+    color: #D50032;
+    margin-bottom: 20px;
+}
+
+.detalle-platillo img {
+    max-width: 400px;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    margin-bottom: 20px;
+}
+
+.detalle-platillo .btn {
+    padding: 10px 20px;
+    background-color: #0033A0;
+    color: white;
+    text-decoration: none;
+    font-size: 1rem;
+    border-radius: 5px;
+    transition: background-color 0.3s ease;
+}
+
+.detalle-platillo .btn:hover {
+    background-color: #001f70;
+}
