--- a/css/estilos.css
+++ b/css/estilos.css
@@ -595,3 +595,9 @@ footer {
     font-size: 0.9rem;
 }
 
+.decoracion-video {
+    border: 0;
+    height: 9px; /* Aumenta el grosor de la línea */
+    background: linear-gradient(to right, #ff0000, #0000ff, #ffffff, #ff0000, #0000ff); /* Rojo, azul y blanco */
+    margin:1px 0;
+}
