--- a/css/estilos.css
+++ b/css/estilos.css
@@ -14,43 +14,14 @@
     background-color: #444;
 }
 
-/* Estilo para el menú */
-#menu {
-    position: fixed;
-    top: 0;
-    left: 800px; /* Asegura que el menú esté en el lado izquierdo */
-    width: 200px;
-    height: 70%;
-    background-color: rgba(29, 26, 26, 0.445); /* Fondo semitransparente */
-    color: black;
-    padding: 20px;
-    display: none;
-    box-shadow: 2px 0 5px rgba(0, 0, 0, 0.2); /* Sombra a la derecha */
-}
 
-/* Estilo para los enlaces dentro del menú */
-#menu a {
-    color: black;
-    text-decoration: none;
-    display: block;
-    margin-bottom: 15px;
-    font-size: 18px;
-}
+
+
 
 #menu a:hover {
     color: #007BFF;
 }
 
-/* Estilos para la ventana modal */
-.modal {
-    display: none; /* Inicialmente oculta */
-    position: absolute;
-    z-index: 1000;
-    top: 50px; /* Ajusta la posición para que esté justo debajo del icono */
-    left: 50px; /* Asegura que la ventana se muestre al lado del ícono */
-    width: 300px; /* Define el ancho del modal */
-    background-color: rgba(0, 0, 0, 0.7); /* Fondo oscuro con opacidad */
-}
 
 .modal-content {
     position: relative;
@@ -865,4 +836,7 @@ button.btn {
     margin: 1px 0; /* Espaciado arriba y abajo */
     border-radius: 4px; /* Opcional: bordes redondeados */
   }
+  /* Estilos para la burbujita de WhatsApp */
+
+
   
